--- a/src/components/Items.css
+++ b/src/components/Items.css
@@ -12,14 +12,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .items-row {
-    max-width: 100rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 100rem;
     font-size: 2rem;
+    gap: 2rem;
     position: relative;
     width: 120rem;
 }
@@ -29,9 +31,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 2rem;
+    gap: 3rem;
     margin-bottom: 3rem;
 
+}
+
+.items-entries {
+    display: flex;
+    gap: 0.5rem;
 }
 
 .items-entries.line-through {
